# timr

./: .pre-commit-config.yaml  README.md  pyproject.toml
performance_timer/: exceptions.py  timer.py
timr/: exceptions.py  timer.py  timr.py
unit_tests/: test_timr.py
