# SYSTEM

[tool.poetry]
name = "performance-timer"
version = "0.1.0"
description = ""
authors = ["Thibaut Stalin <thibaut.st@gmail.com>"]
readme = "README.md"
packages = [{ include = "performance_timer" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^3.11"
shortuuid = "^1.0.11"

[tool.poetry.group.dev.dependencies]
callee = "^0.3.1"
coverage = "^6.5.0"
black = { extras = ["d"], version = "^22.10.0" }
isort = "^5.10.1"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
bandit = "^1.7.4"
sphinx = "^5.3.0"
mypy = "^0.991"

# SETTINGS

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true


[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-many-instance-attributes",
    "too-few-public-methods"
]